docs/api/qiskit/0.25/qiskit.transpiler.AnalysisPass.mdx
---
title: AnalysisPass
description: API reference for qiskit.transpiler.AnalysisPass
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.AnalysisPass
---

# qiskit.transpiler.AnalysisPass

<Class id="qiskit.transpiler.AnalysisPass" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/transpiler/basepasses.py" signature="AnalysisPass(*args, **kwargs)">
  An analysis pass: change property set, not DAG.

  ### \_\_init\_\_

  <Function id="qiskit.transpiler.AnalysisPass.__init__" name="__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                    |                               |
  | -------------------------------------------------------------------------------------------------- | ----------------------------- |
  | [`__init__`](#qiskit.transpiler.AnalysisPass.__init__ "qiskit.transpiler.AnalysisPass.__init__")() | Initialize self.              |
  | [`name`](#qiskit.transpiler.AnalysisPass.name "qiskit.transpiler.AnalysisPass.name")()             | Return the name of the pass.  |
  | [`run`](#qiskit.transpiler.AnalysisPass.run "qiskit.transpiler.AnalysisPass.run")(dag)             | Run a pass on the DAGCircuit. |

  ## Attributes

  |                                                                                                                                            |                                             |
  | ------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------- |
  | [`is_analysis_pass`](#qiskit.transpiler.AnalysisPass.is_analysis_pass "qiskit.transpiler.AnalysisPass.is_analysis_pass")                   | Check if the pass is an analysis pass.      |
  | [`is_transformation_pass`](#qiskit.transpiler.AnalysisPass.is_transformation_pass "qiskit.transpiler.AnalysisPass.is_transformation_pass") | Check if the pass is a transformation pass. |

  ### is\_analysis\_pass

  <Function id="qiskit.transpiler.AnalysisPass.is_analysis_pass" name="is_analysis_pass" signature="property is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Function>

  ### is\_transformation\_pass

  <Function id="qiskit.transpiler.AnalysisPass.is_transformation_pass" name="is_transformation_pass" signature="property is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Function>

  ### name

  <Function id="qiskit.transpiler.AnalysisPass.name" name="name" signature="name()">
    Return the name of the pass.
  </Function>

  ### run

  <Function id="qiskit.transpiler.AnalysisPass.run" name="run" signature="abstract run(dag)">
    Run a pass on the DAGCircuit. This is implemented by the pass developer.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the dag on which the pass is run.

    **Raises**

    **NotImplementedError** – when this is left unimplemented for a pass.
  </Function>
</Class>

